# learn-wgpu

./: Cargo.toml  README.md
examples/ch01/: wgpu_info.rs
examples/ch02/: rectangle.rs  rectangle_vertex_color.wgsl  triangle.rs  triangle_gpu_buffer.rs  triangle_gpu_buffer.wgsl  triangle_primitive.rs  triangle_primitive.wgsl  triangle_vertex_color.wgsl
examples/imshow/: common.rs  imshow.rs  imshow.wgsl
src/: helpers.rs
