[package]
name = "wgpu_gp"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24.0"
cgmath = "0.18.0"
log = "0.4"
env_logger = "0.10.0"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
pollster = "0.2"
winit = { version = "0.29", features = ["rwh_05"] }
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }


[[example]]
name = "wgpu_info"
path = "examples/ch01/wgpu_info.rs"

[[example]]
name = "triangle"
path = "examples/ch02/triangle.rs"

[[example]]
name = "triangle_primitive"
path = "examples/ch02/triangle_primitive.rs"
